Development of the new state system (2/...) and tests.